--- a/node_js/day1/package.json
+++ b/node_js/day1/package.json
@@ -4,7 +4,7 @@
   "description": "first day of using node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "start": "node --watch app.js"
   },
   "author": "",
   "license": "ISC",
